<?xml version="1.0"?>
<package format="2">
  <name>rpg_mpc</name>
  <version>0.0.0</version>
  <description>Model Predictive Control for Quadrotors</description>

  <maintainer email="foehn@ifi.uzh.ch">foehnph</maintainer>

  <license>GNU GPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>


  <depend>autopilot</depend>
  <depend>geometry_msgs</depend>
  <depend>quadrotor_common</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>trajectory_msgs</depend>

  <export>
  </export>
</package>